--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass{book}
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage[margin=1in]{geometry}
@@ -8,7 +8,10 @@
 \begin{document}
 \maketitle
 
+
 \allowdisplaybreaks
-\input{main}
+\tableofcontents
+
+\input{maths/main.tex}
 
 \end{document}
